# global preprocessor flags
AM_CPPFLAGS = \
    -I$(top_srcdir)/include \
    -I$(top_srcdir) \
    $(BOOST_CPPFLAGS)

# global linker flags
AM_LDFLAGS = \
	$(BOOST_DATE_TIME_LDFLAGS) \
	$(BOOST_PROGRAM_OPTIONS_LDFLAGS) \
	$(BOOST_SYSTEM_LDFLAGS) \
	$(BOOST_THREAD_LDFLAGS) \
	$(BOOST_SERIALIZATION_LDFLAGS) \
	$(BOOST_GRAPH_LDFLAGS) 

# global libs
LIBS = \
	$(BOOST_DATE_TIME_LIBS) \
	$(BOOST_PROGRAM_OPTIONS_LIBS) \
	$(BOOST_SYSTEM_LIBS) \
	$(BOOST_THREAD_LIBS) \
	$(BOOST_SERIALIZATION_LIBS) 
	$(BOOST_GRAPH_LIBS)

lib_LTLIBRARIES = libcss_parser_pp.la libcss_parser.la

libcss_parser_pp_la_SOURCES = \
	parser_pp.cc \
	parser.c

libcss_parser_la_SOURCES = \
	css_syntax.y \
	css_lex.l \
	parser.c

AM_YFLAGS = -d
AM_LFLAGS = -i

EXTRA_DIST = default.css
cssdir = $(pkgdatadir)/css
css_DATA = default.css